test_suite/alan-2022-examples/failing/003390_mutation.alan
source nM2 begin if 6 then relax elsif leave then relax end end
